2006-10-20 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped package version to 20061020.
	
	* configure.ac: Bumped shared library version to 27:0:0

2006-10-19  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* configure.ac: Cleaned up to remove remaining traces of noweb
	days.

	* noweb/.cvsignore: Removed file for directory to get pruned on
	checkout.

	* docs/libgedadoc.texi, docs/texinfo.tex: Removed unused files for
	old noweb documentation.

	* scripts/geda_totexi.in:
	* scripts/notangle_guile.in:
	* scripts/prepnoweb: Removed unused scripts for noweb.

2006-10-17  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* src/o_text_basic.c (o_text_create_string): Fixed overbar feature
	to work with UTF-8 characters (Bug#1578416).

2006-10-04 Carlos Nieves Onega <cnieves@iespana.es>

	* include/struct.h, src/s_toplevel.c:
	Removed the new variable to track wether the main window is maximized
	or not. It's no more necessary due to the patch from Patrick Bernaud.

2006-09-30 Carlos Nieves Onega <cnieves@iespana.es>

	* include/struct.h, src/s_toplevel.c:
	Added a new variable to track wether the main window is maximized
	or not. This is part of the bug #1527465 fix.

2006-09-30 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/a_basic.c: Fixed a memory leak in o_save when saving 
	complex objects.  Not a large leak, but this function gets called
	all the time when recording undo info.  Found using valgrind.

	* src/s_page.c: Added check to fix Bug#1562352 (Gattrib crashes
	doing file-save when no files open)

2006-09-28 Carlos Nieves Onega <cnieves@iespana.es>

	* include/prototype.h, include/struct.h, src/g_smob.c:
	  Added new page smob.
	
2006-09-27 Carlos Nieves Onega <cnieves@iespana.es>

	* configure.ac : Applied patch #1564796 by Cesar Strauss, 
	enabling Cygwin's compilation. Thanks.
	
2006-09-24 Ales Hvezda   <ahvezda@geda.seul.org>

        * AUTHORS: Updated file pointing people at gschem's AUTHOR file 