@@ -1,3 +1,8 @@
+2006-11-01 Carlos Nieves Onega <cnieves@iespana.es>
+
+	* include/prototype.h, src/g_smob.c: Added new "get-attribute-bounds"
+	  scheme function.
+
 2006-10-20 Ales Hvezda   <ahvezda@geda.seul.org>
 
         * configure.ac: Bumped package version to 20061020.
